# cocoslearn

./: build.cmd
Game/: CMakeLists.txt
Game/Classes/: AppDelegate.cpp  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  PauseScene.cpp  PauseScene.h
Game/proj.win32/: game.aps
